# plutip

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  Makefile  README.md  STANDARDS.md  _typos.toml  cabal.project  crates.js  debug  docker-compose.yaml  flake.nix  help.html  hercules-ci.nix  hie.yaml  index.html  local-cluster-info.json  needed_deps  pab-conf.yaml  patch-cardano-api.diff  patch-cardano-ledger-byron.diff  patch-dbvar.diff  patch-ouroboros-consensus-byron.diff  patch-ouroboros-consensus-shelley.diff  patch-ouroboros-consensus.diff  patch-ouroboros-network.diff  plutip-core.cabal  plutip.cabal  pre-commit.nix  regenerate-configs.md  search-index.js  settings.html  shell.nix  sources_bpi  sources_plutus_apps  src-files.js  start-old-node.sh  switching-node-version.md  transition-node-version.md  vasil-hardfork.md
.github/workflows/: integrate.yaml
cluster-data/: alonzo-genesis-increased-exUnits.yaml  alonzo-genesis.yaml  bft-leader.counter  bft-leader.kes.skey  bft-leader.kes.vkey  bft-leader.opcert  bft-leader.skey  bft-leader.vkey  bft-leader.vrf.skey  bft-leader.vrf.vkey  byron-genesis-init.yaml  byron-genesis.yaml  byron.genesis.spec.json  delegate-keys.000.key  delegation-cert.000.json  node.config  print-byron-mainnet-addresses.zsh  regenerate-configs.md  regenerate.sh  shelley-genesis.yaml  tx-proposal.txbody  tx-proposal.txsigned  update-proposal-cost-model.sh  update-proposal-major-version.sh  update-proposal.sh  update.proposal
cluster-data/cost-models-data/: FlattenJson.hs  cost-model-update.json  cost-model.md
cluster-data/delegate-keys/: delegate1.kes.skey  delegate1.kes.vkey  opcert1.cert
cluster-data/faucet-addrs/: faucet1.addr  faucet1.byron.key  faucet1.shelley.key  faucet10.addr  faucet10.byron.key  faucet10.shelley.key  faucet100.addr  faucet100.byron.key  faucet100.shelley.key  faucet101.addr  faucet101.byron.key  faucet101.shelley.key  faucet102.addr  faucet102.byron.key  faucet102.shelley.key  faucet103.addr  faucet103.byron.key  faucet103.shelley.key  faucet104.addr  faucet104.byron.key  faucet104.shelley.key  faucet105.addr  faucet105.byron.key  faucet105.shelley.key  faucet106.addr  faucet106.byron.key  faucet106.shelley.key  faucet107.addr  faucet107.byron.key  faucet107.shelley.key  faucet108.addr  faucet108.byron.key  faucet108.shelley.key  faucet109.addr  faucet109.byron.key  faucet109.shelley.key  faucet11.addr  faucet11.byron.key  faucet11.shelley.key  faucet110.addr  (+561 more)
cluster-data/genesis-keys/: genesis1.skey  genesis1.vkey
cluster-data/known_wallets/: signing-key-177d4fe167cafade6f921f9258c2d29163525438972462715b93d50c.skey  signing-key-2028a26c8e17ff48490c4d15517bec60b4f30cc1a085de4587c80828.skey  signing-key-216d47fdf0a31990b6463b50a08aed26826bcde4356269f1bbc70aa3.skey  signing-key-736e2867ad15483131153810c7efe9d3a5492e100fee44fb951fc820.skey  signing-key-9d55a979dd43aecec4ae66d39b942fc7a856ff964050e75882fdd419.skey  signing-key-c1eac8443ecaa92d0e1f80488e85fc489013cd4939ff927ed3cf9ca3.skey  signing-key-c4f7410983bc99be16dcb1d17e79ffcca7722523643ca2f88d0ca83c.skey  signing-key-c9dedf8fbfb2b4d38c9f4550a58ab934be99451766849396ada62bd2.skey  signing-key-cdb663a0d86b1a0272310f9e8c03e72c7b72e730a3c53512c53b8697.skey  signing-key-f3e0489e045fbba95ddfc3624e2f9de569d1a6d8244fc2545298f41f.skey  verification-key-177d4fe167cafade6f921f9258c2d29163525438972462715b93d50c.vkey  verification-key-2028a26c8e17ff48490c4d15517bec60b4f30cc1a085de4587c80828.skey  verification-key-216d47fdf0a31990b6463b50a08aed26826bcde4356269f1bbc70aa3.skey  verification-key-736e2867ad15483131153810c7efe9d3a5492e100fee44fb951fc820.vkey  verification-key-9d55a979dd43aecec4ae66d39b942fc7a856ff964050e75882fdd419.skey  verification-key-c1eac8443ecaa92d0e1f80488e85fc489013cd4939ff927ed3cf9ca3.skey  verification-key-c4f7410983bc99be16dcb1d17e79ffcca7722523643ca2f88d0ca83c.vkey  verification-key-c9dedf8fbfb2b4d38c9f4550a58ab934be99451766849396ada62bd2.skey  verification-key-cdb663a0d86b1a0272310f9e8c03e72c7b72e730a3c53512c53b8697.vkey  verification-key-f3e0489e045fbba95ddfc3624e2f9de569d1a6d8244fc2545298f41f.vkey
cluster-data/tmp/: genesis-keys.000.key  genesis.json
cluster-data/utxo-keys/: utxo1.addr  utxo1.skey  utxo1.vkey
contract-execution/: Currency.hs  ExampleContracts.hs  Main.hs  README.md
doc-notes/: README.md  cluster-tweaking.md
docs/: cardano-wallet-update.md  collateral-handling.md  constant-keys.md  interactive-plutip.md  internals-overview.md  regenerate-network-configs.md  running-chain-index.md  tasty-integration.md  tweaking-network.md  wallet-tags-and-addresses.md
example/: Main.hs  issue_notes.md
example/DebugContract/: GetUtxos.hs  LockUnlockValidationFail.hs  PayToWallet.hs
generate-contract/: Main.hs  SomeScript.hs
generate-script/: README.md
local-cluster/: Main.hs  README.md
nix/: README.md  haskell.nix  sha256map.nix
plutip-rust/: .envrc  Cargo.toml  build.nix
plutip-rust/src/: lib.rs
plutip-server/: Api.hs  Main.hs  Types.hs
plutip-server/Api/: Handlers.hs
plutip_rust/: all.html  enum.PlutipConfigBuilderError.html  enum.PlutipError.html  index.html  sidebar-items.js  struct.Plutip.html  struct.PlutipConfig.html  struct.PlutipConfigBuilder.html
shelley-genesis-md/example/: genesis.json  genesis.spec.json
shelley-genesis-md/example/delegate-keys/: delegate1.counter  delegate1.kes.skey  delegate1.kes.vkey  delegate1.skey  (+4 more)
src/: Address.hs  DSL.hs  Keys.hs  Plutip.hs  Utils.hs
src/BotInterface/: Keys.hs  Run.hs  Setup.hs  Types.hs  Wallet.hs
src/DebugContract/: DebugGet.hs  GetUtxos.hs  LockUnlock.hs  LockUnlockValidationFail.hs  LogPkh.hs  PayToWallet.hs
src/LocalCluster/: Action.hs  CardanoApi.hs  Cluster.hs  DebugCli.hs  Run.hs  Types.hs  Wallet.hs
src/Plutip/: CardanoApi.hs  Cluster.hs  Config.hs  DistributeFunds.hs  Keys.hs  Types.hs
src/Test/: Plutip.hs
src/Tools/: Address.hs  CardanoApi.hs  ChainIndex.hs  DebugCli.hs
src/plutip_rust/: lib.rs.html
test/: Main.hs
test/Spec/: ClusterStartup.hs  Integration.hs  SpendScript.hs  TestContract.hs
test/Test/: BotInterface.hs  Integration.hs
(+73 files in other folders)
