cabal-version:      3.0
name:               plutip-core
version:            0.2
license-file:       LICENSE
author:             mlabs
maintainer:         TODO
build-type:         Simple
extra-source-files: CHANGELOG.md
data-files:
  cluster-data/*.cert
  cluster-data/*.config
  cluster-data/*.counter
  cluster-data/*.opcert
  cluster-data/*.sh
  cluster-data/*.skey
  cluster-data/*.vkey
  cluster-data/*.yaml
  cluster-data/faucet-addrs/*.addr
  cluster-data/faucet-addrs/*.key

common common-imports
  build-depends:
    , aeson
    , aeson-qq
    , async
    , base
    , base16-bytestring
    , base58-bytestring
    , bech32
    , bech32-th
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-cli
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-wallet
    , cardano-wallet-launcher
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , cborg
    , containers
    , contra-tracer
    , data-default
    , deepseq
    , directory
    , either
    , filepath
    , generic-lens
    , http-client
    , http-types
    , int-cast
    , iohk-monitoring
    , lens
    , memory
    , mtl
    , ouroboros-consensus
    , ouroboros-network
    , plutus-core
    , retry
    , servant-client
    , stm
    , temporary
    , text
    , text-class
    , time
    , typed-process
    , unliftio
    , unliftio-core
    , yaml
    -- FIXME: cardano-node only for appearing in nix project, when use mlabs-tooling
    , cardano-node

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

common common-configs
  default-language: Haskell2010

common common-ghc-options
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-specialize -fno-strictness -fno-warn-orphans -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          common-imports
  import:          common-language
  import:          common-configs
  import:          common-ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wmissing-import-lists -Werror

  hs-source-dirs:  src/
  exposed-modules:
    Plutip.CardanoApi
    Plutip.Cluster
    Plutip.Config
    Plutip.DistributeFunds
    Plutip.Keys
    Plutip.Types

  other-modules:
    Paths_plutip_core
    Plutip.Launch.Cluster
    Plutip.Launch.Extra.Types
    Plutip.Launch.Extra.Utils
    Plutip.Launch.FaucetFunds
    Plutip.Launch.PoolConfigs

test-suite plutip-tests
  import:             common-imports
  import:             common-language
  import:             common-configs
  import:             common-ghc-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base
    , plutip-core
    , tasty
    , tasty-hunit
    , text

  other-modules:      Spec.ClusterStartup
  default-extensions:
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TupleSections

executable local-cluster
  main-is:       local-cluster/Main.hs
  build-depends:
    , aeson
    , base
    , cardano-wallet-launcher
    , containers
    , data-default
    , mtl
    , optparse-applicative
    , plutip-core
    , time

  ghc-options:   -Wall -threaded -rtsopts
