cabal-version:      3.0
name:               plutip
version:            0.2
license-file:       LICENSE
author:             mlabs
maintainer:         TODO
build-type:         Simple
extra-source-files: CHANGELOG.md
data-files:
  cluster-data/*.cert
  cluster-data/*.config
  cluster-data/*.counter
  cluster-data/*.opcert
  cluster-data/*.sh
  cluster-data/*.skey
  cluster-data/*.vkey
  cluster-data/*.yaml
  cluster-data/faucet-addrs/*.addr
  cluster-data/faucet-addrs/*.key

common common-imports
  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , bot-plutus-interface
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-slotting
    , cardano-wallet
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , containers
    , contra-tracer
    , data-default
    , directory
    , either
    , exceptions
    , filepath
    , first-class-families
    , http-client
    , http-types
    , iohk-monitoring
    , memory
    , mtl
    , openapi3
    , ouroboros-consensus
    , ouroboros-network
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , positive
    , pretty-show
    , prettyprinter
    , retry
    , row-types
    , servant-client
    , stm
    , tagged
    , tasty
    , tasty-hunit
    , text
    , text-class
    , transformers-except
    , typed-process
    , unliftio
    , unliftio-core
    , uuid

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

common common-configs
  default-language: Haskell2010

common common-ghc-options
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-specialize -fno-strictness -fno-warn-orphans -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          common-imports
  import:          common-language
  import:          common-configs
  import:          common-ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Werror

  hs-source-dirs:  src/
  exposed-modules:
    Test.Plutip.Config
    Test.Plutip.Contract
    Test.Plutip.Contract.Init
    Test.Plutip.Contract.Types
    Test.Plutip.Contract.Values
    Test.Plutip.Internal.BotPlutusInterface.Keys
    Test.Plutip.Internal.BotPlutusInterface.Run
    Test.Plutip.Internal.BotPlutusInterface.Setup
    Test.Plutip.Internal.BotPlutusInterface.Types
    Test.Plutip.Internal.BotPlutusInterface.Wallet
    Test.Plutip.Internal.LocalCluster
    Test.Plutip.Internal.Types
    Test.Plutip.LocalCluster
    Test.Plutip.Options
    Test.Plutip.Predicate
    Test.Plutip.Tools
    Test.Plutip.Tools.Address
    Test.Plutip.Tools.CardanoApi
    Test.Plutip.Tools.ChainIndex
    Test.Plutip.Tools.DebugCli
    Test.Plutip.Tools.Format

  other-modules:   Paths_plutip

test-suite plutip-tests
  import:             common-imports
  import:             common-language
  import:             common-configs
  import:             common-ghc-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base
    , lens
    , plutip
    , tasty
    , tasty-expected-failure
    , tasty-hunit
    , tasty-quickcheck
    , text

  other-modules:
    Spec.Integration
    Spec.Test.Plutip.BotPlutusInterface
    Spec.TestContract.AlwaysFail
    Spec.TestContract.LockSpendMint
    Spec.TestContract.SimpleContracts
    Spec.TestContract.ValidateTimeRange

  default-extensions:
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TupleSections

executable plutip-server
  import:           common-language
  import:           common-ghc-options
  main-is:          Main.hs
  hs-source-dirs:   plutip-server
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-wallet
    , cardano-wallet-launcher
    , data-default
    , directory
    , exceptions
    , extra
    , filepath
    , http-types
    , mtl
    , optparse-applicative
    , plutip
    , positive
    , servant-server
    , stm
    , text
    , unliftio
    , wai
    , wai-cors
    , wai-logger
    , warp

  other-modules:
    Api
    Api.Handlers
    Types

  ghc-options:      -Wall -threaded -rtsopts

executable local-cluster
  main-is:       local-cluster/Main.hs
  build-depends:
    , base
    , data-default
    , mtl
    , optparse-applicative
    , plutip
    , positive

  ghc-options:   -Wall -threaded -rtsopts
