cabal-version:      3.0
name:               plutip
version:            0.2
license-file:       LICENSE
author:             mlabs
maintainer:         TODO
build-type:         Simple
extra-source-files: CHANGELOG.md
data-files:
  cluster-data/*.cert
  cluster-data/*.config
  cluster-data/*.counter
  cluster-data/*.opcert
  cluster-data/*.sh
  cluster-data/*.skey
  cluster-data/*.vkey
  cluster-data/*.yaml
  cluster-data/faucet-addrs/*.addr
  cluster-data/faucet-addrs/*.key

common common-imports
  build-depends:
    , aeson
    , aeson-qq
    , ansi-terminal
    , async
    , base
    , base58-bytestring
    , bech32
    , bech32-th
    , bot-plutus-interface
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-cli
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-wallet
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , cborg
    , containers
    , contra-tracer
    , data-default
    , directory
    , either
    , exceptions
    , filepath
    , generic-lens
    , http-client
    , http-types
    , int-cast
    , iohk-monitoring
    , memory
    , mtl
    , openapi3
    , ouroboros-consensus
    , ouroboros-network
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , positive
    , pretty-show
    , prettyprinter
    , retry
    , row-types
    , servant-client
    , stm
    , tagged
    , tasty
    , tasty-hunit
    , text
    , text-class
    , time
    , transformers-except
    , typed-process
    , unliftio
    , unliftio-core
    , uuid
    , yaml
    , cardano-crypto-class

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

common common-configs
  default-language: Haskell2010

common common-ghc-options
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-specialize -fno-strictness -fno-warn-orphans -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          common-imports
  import:          common-language
  import:          common-configs
  import:          common-ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wmissing-import-lists -Werror

  hs-source-dirs:  src/
  exposed-modules:
    Test.Plutip.Config
    Test.Plutip.Crypto
    Test.Plutip.Contract
    Test.Plutip.Contract.Init
    Test.Plutip.Contract.Types
    Test.Plutip.Contract.Values
    Test.Plutip.Internal.BotPlutusInterface.Keys
    Test.Plutip.Internal.BotPlutusInterface.Run
    Test.Plutip.Internal.BotPlutusInterface.Setup
    Test.Plutip.Internal.BotPlutusInterface.Types
    Test.Plutip.Internal.BotPlutusInterface.Wallet
    Test.Plutip.Internal.ChainIndex
    Test.Plutip.Internal.Cluster
    Test.Plutip.Internal.Cluster.Extra.Types
    Test.Plutip.Internal.Cluster.Extra.Utils
    Test.Plutip.Internal.LocalCluster
    Test.Plutip.Internal.Types
    Test.Plutip.LocalCluster
    Test.Plutip.Options
    Test.Plutip.Predicate
    Test.Plutip.Tools.Address
    Test.Plutip.Tools.CardanoApi
    Test.Plutip.Tools.ChainIndex
    Test.Plutip.Tools.DebugCli
    Test.Plutip.Tools.Format

  other-modules:   Paths_plutip

test-suite plutip-tests
  import:             common-imports
  import:             common-language
  import:             common-configs
  import:             common-ghc-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base
    , lens
    , plutip
    , tasty
    , tasty-expected-failure
    , tasty-hunit
    , tasty-quickcheck
    , text

  other-modules:
    Spec.Integration
    Spec.Test.Plutip.BotPlutusInterface
    Spec.TestContract.AdjustTx
    Spec.TestContract.AlwaysFail
    Spec.TestContract.LockSpendMint
    Spec.TestContract.MintAndPay
    Spec.TestContract.MustBeSignedBy
    Spec.TestContract.SimpleContracts
    Spec.TestContract.ValidateTimeRange
    Spec.TestContract.VasilFeatures

  default-extensions:
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TupleSections

executable plutip-server
  import:           common-language
  import:           common-ghc-options
  main-is:          Main.hs
  hs-source-dirs:   plutip-server
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , cardano-wallet
    , cardano-wallet-launcher
    , data-default
    , directory
    , exceptions
    , extra
    , filepath
    , http-types
    , mtl
    , optparse-applicative
    , plutip
    , positive
    , servant-server
    , stm
    , text
    , time
    , unliftio
    , wai
    , wai-cors
    , wai-logger
    , warp

  other-modules:
    Api
    Api.Handlers
    Types

  ghc-options:      -Wall -threaded -rtsopts

executable local-cluster
  main-is:       local-cluster/Main.hs
  build-depends:
    , aeson
    , base
    , cardano-ledger-core
    , cardano-wallet-launcher
    , containers
    , data-default
    , mtl
    , optparse-applicative
    , plutip
    , positive
    , time
    , unix

  ghc-options:   -Wall -threaded -rtsopts

executable contract-execution
  import:         common-language
  import:         common-ghc-options
  hs-source-dirs: contract-execution
  main-is:        Main.hs
  build-depends:
    , base
    , cardano-ledger-core
    , containers
    , data-default
    , lens
    , mtl
    , optparse-applicative
    , plutip
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-pab
    , positive
    , pretty-simple
    , text
    , time

  other-modules:  ExampleContracts
  ghc-options:    -Wall -threaded -rtsopts
