[package]
name = "plutip-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tx-bakery = { version = "0.1.0", path = ".extras/tx-bakery-0.1.0" }
tokio = { version = "1.24.2", features = ["full"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }
thiserror = "1.0.57"
nix = { version = "0.28.0", features = ["signal"] }
wait-timeout = "0.2.0"
data-encoding = "2.5.0"
derive_builder = "0.12.0"
plutus-ledger-api = { version = "0.2.1", features = ["lbf", "chrono"] }
serde = "1.0.195"
serde_json = "1.0.122"
